--- a/app/src/main/res/layout/activity_intervention.xml
+++ b/app/src/main/res/layout/activity_intervention.xml
@@ -56,7 +56,7 @@
 
         <TextView
             android:id="@+id/child2_txt2"
-            android:layout_marginLeft="33dp"
+            android:layout_marginHorizontal="33dp"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
