--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -15,7 +15,24 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/map_save_btn"
+                android:layout_width="135dp"
+                android:layout_height="32dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/btn_design_blue"
+                android:fontFamily="@font/notosanscjkkrregular"
+                android:includeFontPadding="false"
+                android:text="이 장소 저장하기"
+                android:textColor="@color/textColor_blue"
+                android:textSize="@dimen/my_text_size16"
+                app:layout_constraintBottom_toTopOf="@+id/map_explain"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/map" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar_map"
@@ -24,6 +41,8 @@
                 android:background="?attr/colorPrimary"
                 android:elevation="10dp"
                 android:theme="@style/Toolbar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
@@ -31,12 +50,56 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="설정"
-                    android:includeFontPadding="false"
                     android:fontFamily="@font/notosanscjkkrregular"
+                    android:includeFontPadding="false"
+                    android:text="설정"
                     android:textSize="20sp" />
 
             </androidx.appcompat.widget.Toolbar>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="40dp"
+                android:layout_marginTop="5dp"
+                app:cardCornerRadius="4dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/map">
+
+                <fragment
+                    android:id="@+id/frg_places_autocomplete"
+                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+            </androidx.cardview.widget.CardView>
+
+            <fragment
+                android:id="@+id/map"
+                android:name="kr.ac.inha.mindscope.ScrollableMapFragment"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintWidth_default="percent"
+                app:layout_constraintWidth_percent="0.9"
+                app:layout_constraintDimensionRatio="1:0.8"
+                android:layout_marginVertical="30dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/toolbar_map"
+                tools:context=".MapsActivity" />
+
+            <ImageButton
+                android:id="@+id/current_location_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="5dp"
+                android:background="@color/color_current_location_btn"
+                android:padding="5dp"
+                android:src="@drawable/ic_f_location"
+                app:layout_constraintBottom_toBottomOf="@id/map"
+                app:layout_constraintLeft_toLeftOf="@id/map" />
 
             <LinearLayout
                 android:id="@+id/loading_frame"
@@ -44,23 +107,23 @@
                 android:layout_height="180dp"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="50dp"
-                android:gravity="center"
                 android:background="#80000000"
+                android:elevation="40dp"
+                android:gravity="center"
                 android:orientation="vertical"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:visibility="visible"
-                android:elevation="40dp">
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Loading the map..."
-                    android:textStyle="bold"
                     android:textColor="@android:color/white"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -70,93 +133,15 @@
                     android:textSize="18sp" />
             </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@id/map"
-                android:layout_marginHorizontal="40dp"
-                android:layout_marginTop="5dp"
-                app:cardCornerRadius="4dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent">
-
-                <fragment
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-                    android:id="@+id/frg_places_autocomplete"/>
-
-            </androidx.cardview.widget.CardView>
-
-            <fragment
-                android:id="@+id/map"
-                android:name="kr.ac.inha.mindscope.ScrollableMapFragment"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                tools:context=".MapsActivity"
-                android:layout_margin="30dp"
-                app:layout_constraintTop_toBottomOf="@id/toolbar_map"/>
-
-            <Button
-                android:id="@+id/map_save_btn"
-                android:layout_width="135dp"
-                android:layout_height="32dp"
-                android:fontFamily="@font/notosanscjkkrregular"
-                android:includeFontPadding="false"
-                android:textColor="@color/textColor_blue"
-                android:textSize="@dimen/my_text_size16"
-                android:text="이 장소 저장하기"
-                app:layout_constraintTop_toBottomOf="@id/map"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/btn_design_blue"/>
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/map_explain"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/notosanscjkkrlight"
-                android:includeFontPadding="false"
-                android:textSize="@dimen/guide_text_size"
-                android:text="@string/map_explain"
-                android:layout_marginTop="10dp"
-                android:layout_marginHorizontal="28dp"
-                android:textAlignment="center"
-                app:layout_constraintTop_toBottomOf="@id/map_save_btn"/>
-
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/txt_map_save"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/saved_location"
-                android:fontFamily="@font/notosanscjkkrregular"
-                android:includeFontPadding="false"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/map_explain"/>
-
-
-            <View
-                android:id="@+id/border_bottom_txt_map_save"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/border_color"
-                android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@id/txt_map_save"/>
-
             <ListView
                 android:id="@+id/place_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
-                android:dividerHeight="5dp"
                 android:divider="#00000000"
-                app:layout_constraintTop_toBottomOf="@id/txt_map_save"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:dividerHeight="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txt_map_save" />
 
             <TextView
                 android:id="@android:id/empty"
@@ -166,21 +151,47 @@
                 android:layout_marginVertical="15dp"
                 android:fontFamily="@font/notosanscjkkrlight"
                 android:includeFontPadding="false"
-                app:layout_constraintTop_toBottomOf="@id/border_bottom_txt_map_save"
                 android:text="@string/map_first"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                app:layout_constraintTop_toBottomOf="@id/border_bottom_txt_map_save" />
 
-            <ImageButton
-                android:id="@+id/current_location_btn"
-                android:layout_width="wrap_content"
+            <View
+                android:id="@+id/border_bottom_txt_map_save"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/border_color"
+                app:layout_constraintTop_toBottomOf="@id/txt_map_save" />
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/map_explain"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="@id/map"
-                app:layout_constraintBottom_toBottomOf="@id/map"
-                android:src="@drawable/ic_f_location"
-                android:background="@color/color_current_location_btn"
-                android:layout_marginLeft="5dp"
-                android:layout_marginBottom="5dp"
-                android:padding="5dp"/>
+                android:layout_marginHorizontal="28dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/notosanscjkkrlight"
+                android:includeFontPadding="false"
+                android:text="@string/map_explain"
+                android:textAlignment="center"
+                android:textSize="@dimen/guide_text_size"
+                app:layout_constraintTop_toBottomOf="@id/map_save_btn" />
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/txt_map_save"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:fontFamily="@font/notosanscjkkrregular"
+                android:includeFontPadding="false"
+                android:text="@string/saved_location"
+                android:textSize="20sp"
+                app:layout_constraintTop_toBottomOf="@id/map_explain" />
+
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
