--- a/app/src/main/res/layout/fragment_care_child2.xml
+++ b/app/src/main/res/layout/fragment_care_child2.xml
@@ -9,64 +9,72 @@
 
     <TextView
         android:id="@+id/child2_txt1"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:layout_marginHorizontal="35dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/notosanscjkkrregular"
         android:includeFontPadding="false"
+        android:text="@string/string_child2_txt1"
         android:textColor="@color/textColor_default"
         android:textSize="@dimen/my_text_size14"
-        android:text="@string/string_child2_txt1"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/child2_txt2"
-        app:layout_constraintTop_toBottomOf="@id/child2_txt1"
-        android:layout_marginLeft="33dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="33dp"
         android:fontFamily="@font/notosanscjkkrregular"
         android:includeFontPadding="false"
+        android:text="@string/string_child2_txt2"
         android:textColor="@color/textColor_default_light"
         android:textSize="@dimen/guide_text_size"
-        android:text="@string/string_child2_txt2"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/child2_txt1"
+        app:layout_constraintBottom_toTopOf="@id/intervention_container"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/intervention_container"
-        android:layout_marginTop="18dp"
-        app:layout_constraintTop_toBottomOf="@id/child2_txt2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="invisible">
-
-        <TextView
-            android:id="@+id/child2_intervention"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_width="match_parent"
-            android:layout_marginHorizontal="80dp"
-            android:textAlignment="center"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosanscjkkrmedium"
-            android:includeFontPadding="false"
-            android:textColor="@color/textColor_blue"
-            android:textSize="@dimen/my_text_size14"
-            android:text="test"/>
+        android:layout_marginTop="18dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@id/child2_make_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/child2_txt2">
 
         <Button
             android:id="@+id/child2_edit_btn"
             android:layout_width="50dp"
             android:layout_height="35dp"
             android:layout_marginRight="28dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/btn_design"
+            android:stateListAnimator="@null"
+            android:text="변경"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:text="변경"
-            android:stateListAnimator="@null"
-            android:background="@drawable/btn_design"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/child2_intervention"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="80dp"
+            android:fontFamily="@font/notosanscjkkrmedium"
+            android:includeFontPadding="false"
+            android:text="test"
+            android:textAlignment="center"
+            android:textColor="@color/textColor_blue"
+            android:textSize="@dimen/my_text_size14"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -89,19 +97,23 @@
     <ScrollView
         android:id="@+id/child2_txt3_container"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="0dp"
         android:paddingTop="12dp"
-        app:layout_constraintTop_toBottomOf="@id/child2_make_btn">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/child2_make_btn"
+        app:layout_constraintBottom_toTopOf="@id/child2_recommend_container">
 
         <TextView
             android:id="@+id/child2_txt3"
-            android:layout_marginTop="14dp"
-            android:layout_marginBottom="18dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="18dp"
+            android:paddingHorizontal="20dp"
             android:fontFamily="@font/notosanscjkkrlight"
             android:includeFontPadding="false"
+            android:textAlignment="center"
             android:textColor="@color/textColor_light"
             android:textSize="@dimen/my_text_size14"
             android:visibility="visible" />
@@ -111,24 +123,30 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/child2_recommend_container"
 
-        app:layout_constraintBottom_toTopOf="@id/child2_switch_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="19dp"
-        android:background="@drawable/view_top_border">
+        android:background="@drawable/view_top_border"
+        app:layout_constraintBottom_toTopOf="@id/child2_switch_container"
+        app:layout_constraintTop_toBottomOf="@+id/child2_txt3_container">
 
-        <TextView
-            android:id="@+id/child2_txt4"
-            android:layout_marginTop="18dp"
-            android:layout_marginLeft="35dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <Button
+            android:id="@+id/child2_load_btn"
+            android:layout_width="140dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/btn_design"
+            android:drawableLeft="@drawable/ic_refresh_blue_24px"
             android:fontFamily="@font/notosanscjkkrregular"
+            android:gravity="center"
             android:includeFontPadding="false"
-            android:textColor="@color/textColor_default"
+            android:stateListAnimator="@null"
+            android:text="다른 추천 보기"
+            android:textColor="@color/textColor_default_light"
             android:textSize="@dimen/my_text_size14"
-            android:text="@string/string_child2_txt4"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/child2_recommend_scroll" />
 
         <ScrollView
             android:id="@+id/child2_recommend_scroll"
@@ -143,66 +161,62 @@
 
                 <TextView
                     android:id="@+id/child2_recommend1"
-                    android:layout_marginTop="3dp"
-                    android:layout_marginHorizontal="35dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="35dp"
+                    android:layout_marginTop="3dp"
                     android:fontFamily="@font/notosanscjkkrlight"
                     android:includeFontPadding="false"
+                    android:text="test"
                     android:textColor="@color/textColor_light"
                     android:textSize="@dimen/my_text_size14"
-                    android:text="test"
-                    app:layout_constraintTop_toBottomOf="@id/child2_txt4"/>
+                    app:layout_constraintTop_toBottomOf="@id/child2_txt4" />
 
 
                 <TextView
                     android:id="@+id/child2_recommend2"
-                    android:layout_marginTop="3dp"
-                    android:layout_marginHorizontal="35dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="35dp"
+                    android:layout_marginTop="3dp"
                     android:fontFamily="@font/notosanscjkkrlight"
                     android:includeFontPadding="false"
+                    android:text="test"
                     android:textColor="@color/textColor_light"
                     android:textSize="@dimen/my_text_size14"
-                    android:text="test"
-                    app:layout_constraintTop_toBottomOf="@id/child2_recommend1"/>
+                    app:layout_constraintTop_toBottomOf="@id/child2_recommend1" />
 
                 <TextView
                     android:id="@+id/child2_recommend3"
-                    android:layout_marginTop="3dp"
-                    android:layout_marginHorizontal="35dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="35dp"
+                    android:layout_marginTop="3dp"
                     android:fontFamily="@font/notosanscjkkrlight"
                     android:includeFontPadding="false"
+                    android:text="test"
                     android:textColor="@color/textColor_light"
                     android:textSize="@dimen/my_text_size14"
-                    android:text="test"
-                    app:layout_constraintTop_toBottomOf="@id/child2_recommend2"/>
+                    app:layout_constraintTop_toBottomOf="@id/child2_recommend2" />
 
             </LinearLayout>
 
         </ScrollView>
 
-        <Button
-            android:id="@+id/child2_load_btn"
-            android:layout_width="140dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="20dp"
-            android:drawableLeft="@drawable/ic_refresh_blue_24px"
-            android:background="@drawable/btn_design"
-            android:gravity="center"
+        <TextView
+            android:id="@+id/child2_txt4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="35dp"
+            android:layout_marginTop="18dp"
             android:fontFamily="@font/notosanscjkkrregular"
             android:includeFontPadding="false"
-            android:textColor="@color/textColor_default_light"
+            android:text="@string/string_child2_txt4"
+            android:textColor="@color/textColor_default"
             android:textSize="@dimen/my_text_size14"
-            android:text="다른 추천 보기"
-            android:stateListAnimator="@null"
-            app:layout_constraintTop_toBottomOf="@id/child2_recommend_scroll"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
-
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -211,23 +225,11 @@
         android:id="@+id/child2_switch_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/view_top_border"
         android:paddingVertical="20dp"
-        android:background="@drawable/view_top_border">
-
-        <TextView
-            android:id="@+id/child2_txt5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:fontFamily="@font/notosanscjkkrregular"
-            android:includeFontPadding="false"
-            android:textColor="@color/textColor_default"
-            android:textSize="@dimen/my_text_size14"
-            android:layout_marginStart="30dp"
-            android:text="@string/string_child2_txt5"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <Switch
             android:id="@+id/child2_switch"
@@ -235,8 +237,22 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/child2_txt5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:fontFamily="@font/notosanscjkkrregular"
+            android:includeFontPadding="false"
+            android:text="@string/string_child2_txt5"
+            android:textColor="@color/textColor_default"
+            android:textSize="@dimen/my_text_size14"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
