--- a/app/src/main/res/layout/fragment_care_child3.xml
+++ b/app/src/main/res/layout/fragment_care_child3.xml
@@ -35,7 +35,9 @@
     <EditText
         android:id="@+id/child3_comment"
         android:layout_width="match_parent"
-        android:layout_height="270dp"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.5"
         android:layout_marginHorizontal="25dp"
         android:background="@drawable/comment_box_border"
         android:cursorVisible="true"
