--- a/app/src/main/res/layout/fragment_care_step2.xml
+++ b/app/src/main/res/layout/fragment_care_step2.xml
@@ -60,8 +60,7 @@
             app:layout_constraintTop_toBottomOf="@id/care_step2_tab"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginBottom="?actionBarSize"/>
+            android:layout_height="0dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
