--- a/app/src/main/res/layout/fragment_report_step2.xml
+++ b/app/src/main/res/layout/fragment_report_step2.xml
@@ -220,8 +220,11 @@
 
                 <ImageView
                     android:id="@+id/frg_report_step2_img1"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="0dp"
+                    app:layout_constraintWidth_default="percent"
+                    app:layout_constraintWidth_percent="0.25"
+                    android:layout_height="0dp"
+                    app:layout_constraintDimensionRatio="1:1"
                     android:layout_marginTop="30dp"
                     android:src="@drawable/icon_low"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -249,8 +252,8 @@
                     android:layout_marginTop="24dp"
                     android:background="@drawable/view_top_bottom_border"
                     android:orientation="horizontal"
-                    android:paddingHorizontal="20dp"
-                    android:paddingVertical="7dp"
+                    android:paddingHorizontal="12dp"
+                    android:paddingVertical="6dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/txt_stress_level">
 
@@ -259,6 +262,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clickable="false"
+                        app:layout_constraintEnd_toStartOf="@id/txt_report_time1"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -271,7 +275,8 @@
                         android:fontFamily="@font/notosanscjkkrlight"
                         android:includeFontPadding="false"
                         android:text="@string/time_step2_duration1"
-                        android:textSize="@dimen/my_text_size16"
+                        android:textSize="@dimen/my_text_size14"
+                        app:layout_constraintEnd_toStartOf="@id/img_report_result1"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/ch_report1"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -281,7 +286,7 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_gravity="center"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="13dp"
                         android:src="@drawable/icon_low"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/txt_report_time1"
@@ -289,7 +294,7 @@
 
                     <TextView
                         android:id="@+id/txt_report_result1"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginStart="10dp"
@@ -297,6 +302,8 @@
                         android:includeFontPadding="false"
                         android:text="@string/string_low"
                         android:textSize="@dimen/my_text_size14"
+                        app:layout_constraintEnd_toStartOf="@id/arrow_result1"
+                        android:textAlignment="center"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/img_report_result1"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -320,8 +327,8 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/view_bottom_border"
                     android:orientation="horizontal"
-                    android:paddingHorizontal="20dp"
-                    android:paddingVertical="7dp"
+                    android:paddingHorizontal="12dp"
+                    android:paddingVertical="6dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/report_result1">
 
@@ -330,6 +337,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clickable="false"
+                        app:layout_constraintEnd_toStartOf="@id/txt_report_time2"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -342,7 +350,8 @@
                         android:fontFamily="@font/notosanscjkkrlight"
                         android:includeFontPadding="false"
                         android:text="@string/time_step2_duration2"
-                        android:textSize="@dimen/my_text_size16"
+                        android:textSize="@dimen/my_text_size14"
+                        app:layout_constraintEnd_toStartOf="@id/img_report_result2"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/ch_report2"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -352,15 +361,16 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_gravity="center"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="13dp"
                         android:src="@drawable/icon_littlehigh"
+                        app:layout_constraintEnd_toStartOf="@id/txt_report_result2"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/txt_report_time2"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/txt_report_result2"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginStart="10dp"
@@ -368,6 +378,8 @@
                         android:includeFontPadding="false"
                         android:text="@string/string_littlehigh"
                         android:textSize="@dimen/my_text_size14"
+                        android:textAlignment="center"
+                        app:layout_constraintEnd_toStartOf="@id/arrow_result2"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/img_report_result2"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -391,8 +403,8 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/view_bottom_border"
                     android:orientation="horizontal"
-                    android:paddingHorizontal="20dp"
-                    android:paddingVertical="7dp"
+                    android:paddingHorizontal="12dp"
+                    android:paddingVertical="6dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/report_result2">
 
@@ -401,6 +413,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clickable="false"
+                        app:layout_constraintEnd_toStartOf="@id/txt_report_time3"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -413,7 +426,8 @@
                         android:fontFamily="@font/notosanscjkkrlight"
                         android:includeFontPadding="false"
                         android:text="@string/time_step2_duration3"
-                        android:textSize="@dimen/my_text_size16"
+                        android:textSize="@dimen/my_text_size14"
+                        app:layout_constraintEnd_toStartOf="@id/img_report_result3"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/ch_report3"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -423,15 +437,16 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_gravity="center"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="13dp"
                         android:src="@drawable/icon_high"
+                        app:layout_constraintEnd_toStartOf="@id/txt_report_result3"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/txt_report_time3"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/txt_report_result3"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginStart="10dp"
@@ -439,6 +454,8 @@
                         android:includeFontPadding="false"
                         android:text="@string/string_high"
                         android:textSize="@dimen/my_text_size14"
+                        android:textAlignment="center"
+                        app:layout_constraintEnd_toStartOf="@id/arrow_result3"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/img_report_result3"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -462,8 +479,8 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/view_bottom_border"
                     android:orientation="horizontal"
-                    android:paddingHorizontal="20dp"
-                    android:paddingVertical="7dp"
+                    android:paddingHorizontal="12dp"
+                    android:paddingVertical="6dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/report_result3">
 
@@ -472,6 +489,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:clickable="false"
+                        app:layout_constraintEnd_toStartOf="@id/txt_report_time4"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -484,7 +502,8 @@
                         android:fontFamily="@font/notosanscjkkrlight"
                         android:includeFontPadding="false"
                         android:text="@string/time_step2_duration4"
-                        android:textSize="@dimen/my_text_size16"
+                        android:textSize="@dimen/my_text_size14"
+                        app:layout_constraintEnd_toStartOf="@id/img_report_result4"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/ch_report4"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -494,15 +513,16 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_gravity="center"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="13dp"
                         android:src="@drawable/icon_low"
+                        app:layout_constraintEnd_toStartOf="@id/txt_report_result4"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/txt_report_time4"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/txt_report_result4"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginStart="10dp"
@@ -510,6 +530,8 @@
                         android:includeFontPadding="false"
                         android:text="@string/string_low"
                         android:textSize="@dimen/my_text_size14"
+                        android:textAlignment="center"
+                        app:layout_constraintEnd_toStartOf="@id/arrow_result4"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/img_report_result4"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -534,7 +556,7 @@
                     android:background="@drawable/view_bottom_border"
                     android:paddingHorizontal="37dp"
                     android:paddingVertical="13dp"
-                    android:visibility="gone"
+                    android:visibility="invisible"
                     app:layout_constraintTop_toBottomOf="@id/report_result4">
 
                     <TextView
@@ -609,7 +631,7 @@
         android:id="@+id/frg_report_step2_container2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:paddingTop="?attr/actionBarSize">
 
         <ImageButton
@@ -626,8 +648,11 @@
         <ImageView
             android:layout_marginTop="60dp"
             android:id="@+id/frg_report_step2_hidden_img1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="0dp"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.25"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="1:1"
             android:src="@drawable/icon_low"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -699,9 +724,11 @@
             app:layout_constraintRight_toRightOf="parent"
             android:id="@+id/frg_report_step2_stress_reason_container"
             android:layout_width="match_parent"
-            android:layout_height="230dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="50dp"
             android:fillViewport="true"
             app:layout_constraintTop_toBottomOf="@id/frg_report_step2_txt_reason"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:background="@color/color_low_bg">
 
             <LinearLayout
