--- a/app/src/main/res/layout/fragment_stress_report1.xml
+++ b/app/src/main/res/layout/fragment_stress_report1.xml
@@ -63,8 +63,11 @@
         <ImageView
             android:layout_marginTop="54dp"
             android:id="@+id/report_step2_img"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="0dp"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.3"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="1:1"
             android:src="@drawable/icon_low"
             android:layout_marginBottom="6dp"
             app:layout_constraintBottom_toTopOf="@id/report_step2_date"
@@ -112,7 +115,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/report_step2_result"
-            app:layout_constraintBottom_toTopOf="@id/acual_answer_container"
+            app:layout_constraintBottom_toTopOf="@id/actual_answer_container"
             android:layout_marginTop="58dp"
             android:text="@string/string_actual_stress_question"
             android:textAlignment="center"
@@ -121,7 +124,7 @@
             android:textSize="@dimen/my_text_size16"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/acual_answer_container"
+            android:id="@+id/actual_answer_container"
             app:layout_constraintTop_toBottomOf="@id/txt_actual_stress_question"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
