--- a/app/src/main/res/layout/permission_dialog.xml
+++ b/app/src/main/res/layout/permission_dialog.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/permission_dialog_layout">
 
     <ImageView
+        android:layout_marginTop="87dp"
         android:id="@+id/permission_img"
-        android:layout_width="105dp"
-        android:layout_height="105dp"
+        android:layout_width="0dp"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.3"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="1:1"
         android:src="@drawable/icon_low"
         android:layout_above="@id/permission_shadow_img"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="14dp"/>
+        android:layout_marginBottom="14dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/permission_shadow_img"/>
 
     <View
         android:id="@+id/permission_shadow_img"
@@ -20,13 +29,21 @@
         android:background="@drawable/img_shadow"
         android:layout_above="@id/permission_txt123_container"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="48dp"/>
+        android:layout_marginBottom="48dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/permission_img"
+        app:layout_constraintBottom_toTopOf="@id/permission_txt123_container"/>
 
     <RelativeLayout
         android:id="@+id/permission_txt123_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="true"
+        app:layout_constraintTop_toBottomOf="@id/permission_shadow_img"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/permission_dialog_txt4">
 
         <TextView
             android:id="@+id/permission_dialog_txt1"
@@ -81,7 +98,11 @@
         android:textSize="@dimen/my_text_size18"
         android:textColor="@color/textColor_default"
         android:layout_marginTop="48dp"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/permission_btn"
+        app:layout_constraintTop_toBottomOf="@id/permission_txt123_container"/>
 
     <Button
         android:id="@+id/permission_btn"
@@ -95,6 +116,11 @@
         android:includeFontPadding="false"
         android:textSize="@dimen/my_text_size16"
         android:background="@drawable/btn_start_enable"
-        android:textColor="@color/color_white"/>
+        android:textColor="@color/color_white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/permission_dialog_txt4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="87dp"/>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
